Fix - Gutenberg alignfull width styling

--- a/SCSS/theme/_theme-style.scss
+++ b/SCSS/theme/_theme-style.scss
@@ -1841,6 +1841,7 @@ a#scroll-up:hover {
 	.alignfull {
 		margin-left: calc(50% - 50vw);
 		margin-right: calc(50% - 50vw);
+		max-width: unset;
 
 		img {
 			max-width: unset;
