--- a/style.css
+++ b/style.css
@@ -1832,6 +1832,7 @@ a#scroll-up:hover {
 .no-sidebar .alignfull {
 	margin-left: calc(50% - 50vw);
 	margin-right: calc(50% - 50vw);
+	max-width: unset;
 }
 
 .no-sidebar-full-width .alignfull img,
@@ -2306,10 +2307,10 @@ a#scroll-up:hover {
 .widget_featured_slider .slide-content {
 	position: absolute;
 	bottom: 0;
-	background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
-	background: -o-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
-	background: -moz-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
-	background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+	background: -webkit-linear-gradient(top, transparent, rgba(0, 0, 0, 0.3));
+	background: -o-linear-gradient(bottom, transparent, rgba(0, 0, 0, 0.3));
+	background: -moz-linear-gradient(bottom, transparent, rgba(0, 0, 0, 0.3));
+	background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.3));
 	padding-bottom: 20px;
 	padding-left: 5%;
 	position: absolute;
@@ -2390,10 +2391,10 @@ a#scroll-up:hover {
 .widget_highlighted_posts .article-content {
 	position: absolute;
 	bottom: 0;
-	background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
-	background: -o-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
-	background: -moz-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
-	background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+	background: -webkit-linear-gradient(top, transparent, rgba(0, 0, 0, 0.8));
+	background: -o-linear-gradient(bottom, transparent, rgba(0, 0, 0, 0.8));
+	background: -moz-linear-gradient(bottom, transparent, rgba(0, 0, 0, 0.8));
+	background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.8));
 	padding-bottom: 10px;
 	padding-left: 5%;
 	position: absolute;
@@ -3280,7 +3281,7 @@ div#wp-custom-header:hover .wp-custom-header-video-button {
 }
 
 #masthead.colormag-header-clean #site-navigation {
-	box-shadow: 0 0 0 rgba(0, 0, 0, 0) inset;
+	box-shadow: 0 0 0 transparent inset;
 	position: relative;
 	background-color: transparent;
 	border-top: 0 solid transparent;
@@ -3433,7 +3434,7 @@ div#wp-custom-header:hover .wp-custom-header-video-button {
 }
 
 #masthead.colormag-header-classic #site-navigation {
-	box-shadow: 0 0 0 rgba(0, 0, 0, 0) inset;
+	box-shadow: 0 0 0 transparent inset;
 	position: relative;
 	background-color: transparent;
 	border-top: 0 solid transparent;
